# LeaveManagement-Monitoring

./: README.md
backend/: .gitignore  Cargo.toml
backend/entity/src/: conge.rs  departement.rs  employe.rs  mod.rs  prelude.rs  solde.rs
backend/migration/src/: lib.rs  m20240723_134332_create_departement_table.rs  m20240723_134332_create_etablissement_table.rs  m20240723_142314_create_employe_table.rs  m20240808_074507_create_foreign_keys.rs  m20240812_055100_create_solde_table.rs  m20240812_070136_create_conge_table.rs
backend/src/: main.rs
backend/src/routes/: admin_routes.rs  auth_routes.rs  conge_routes.rs  employe_routes.rs  mod.rs
backend/src/routes/handlers/: admin_handlers.rs  auth_handlers.rs  conge_handlers.rs  employe_handlers.rs  mod.rs  test_handlers.rs
backend/src/routes/middleware/: auth_midllewares.rs
backend/src/utils/: api_response.rs  constants.rs  date_fin.rs  jwt.rs  mod.rs  solde_cron.rs
frontend/: bun.lockb  package-lock.json  package.json
frontend/app/about/: page.tsx
frontend/components/: employe_list.tsx
frontend/src/app/: layout.tsx  middleware.ts
frontend/src/components/: AddConge.tsx  AddDepartement.tsx  AddUser.tsx  Auth.tsx  Calendar.tsx  EditUser.tsx  Scheduler.tsx  ViewUser.tsx  navbar.tsx  profile.tsx
frontend/src/components/icon/: iconApp.tsx
frontend/src/configs/: site.ts
frontend/src/hooks/: useAllEmploye.ts  useAuth.ts  useConge.ts  useDepartement.ts  useEmploye.ts
frontend/src/schemas/: authentification.ts  schemaTable.ts
frontend/src/types/: Employe.ts  departement.ts
frontend/types/: employe.ts
(+32 files in other folders)
