[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = "1.0.204"
serde_json = "1.0.120"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-cli = "0.12.15"
migration = { path = "migration" }